fixed axis alignment issues

--- a/style.css
+++ b/style.css
@@ -10,3 +10,12 @@ div#tooltip {
   border-radius: 8px;
   pointer-events: none;
 }
+
+h1, p {
+  text-align: center;
+}
+
+#legend {
+  margin: 0 auto;
+  width: fit-content;
+}
